--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.6.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@types/node": "^18.11.11",
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.12.0",
+    "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
   }
