--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/node": "^18.11.11",
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^4.6.4",
