--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.6.0",
+    "pinia": "^2.0.27",
     "vue": "^3.2.41",
     "vue-i18n": "9"
   },
