--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vueuse/core": "^9.6.0",
     "pinia": "^2.0.27",
     "vue": "^3.2.41",
-    "vue-i18n": "9"
+    "vue-i18n": "9",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
@@ -22,6 +23,7 @@
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
+    "vite-plugin-pages": "^0.27.1",
     "vue-tsc": "^1.0.9"
   }
 }
