--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.15.7",
     "@vueuse/core": "^9.6.0",
     "pinia": "^2.0.27",
+    "quasar": "^2.10.2",
     "vue": "^3.2.41",
     "vue-i18n": "9",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@quasar/vite-plugin": "^1.2.3",
     "@types/node": "^18.11.11",
     "@vitejs/plugin-vue": "^3.2.0",
+    "sass": "1.32.12",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
