--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@quasar/extras": "^1.15.7",
     "@vueuse/core": "^9.6.0",
+    "graphql": "^16.6.0",
     "pinia": "^2.0.27",
     "quasar": "^2.10.2",
+    "villus": "^2.0.1",
     "vue": "^3.2.41",
     "vue-i18n": "9",
     "vue-router": "^4.1.6"
