--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "noEmit": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["node_modules", "vite-plugin-pages/client"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
