--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,11 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": true,
+    
   },
 
-  "types":  ["vite-plugin-pages/client"],
+  "types":  ["vite-plugin-pages/client", "vite/client"],
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "exclude": ["node_modules", "vite-plugin-pages/client"],
   "references": [{ "path": "./tsconfig.node.json" }]
