--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "villus": "^2.0.1",
     "vue": "^3.2.41",
     "vue-i18n": "9",
-    "vue-router": "^4.1.6"
+    "vue-router": "4"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
