--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare": "husky install",
+    "postinstall": "yarn husky install"
   },
   "dependencies": {
     "@quasar/extras": "^1.15.7",
@@ -29,6 +31,10 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.29.0",
     "eslint-plugin-vue": "^9.8.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
+    "pretty-quick": "^3.1.3",
     "sass": "1.32.12",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.12.0",
@@ -36,5 +42,10 @@
     "vite": "^3.2.3",
     "vite-plugin-pages": "^0.27.1",
     "vue-tsc": "^1.0.9"
+  },
+  "lint-staged": {
+    "*": [
+      "yarn pretty-quick --staged"
+    ]
   }
 }
