--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#22241799",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#222417"
+  "peacock.color": "#222417",
+  "i18n-ally.localesPaths": ["locales"]
 }
