--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "prepare": "husky install",
-    "postinstall": "yarn husky install"
+    "postinstall": "yarn husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@quasar/extras": "^1.15.7",
@@ -23,12 +25,21 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@quasar/vite-plugin": "^1.2.3",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-interactions": "^6.5.14",
+    "@storybook/addon-links": "^6.5.14",
+    "@storybook/builder-vite": "^0.2.5",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/vue3": "^6.5.14",
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-vue": "^3.2.0",
+    "babel-loader": "^8.3.0",
     "eslint": "^8.29.0",
     "eslint-plugin-vue": "^9.8.0",
     "husky": "^8.0.2",
@@ -39,8 +50,9 @@
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
-    "vite": "^3.2.3",
+    "vite": "^4.0.1",
     "vite-plugin-pages": "^0.27.1",
+    "vue-loader": "^16.8.3",
     "vue-tsc": "^1.0.9"
   },
   "lint-staged": {
