--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "villus": "^2.0.1",
     "vue": "^3.2.41",
     "vue-i18n": "9",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue-styled-components": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
