--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
+    "@unocss/vite": "^0.48.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vueuse/head": "^1.0.22",
     "babel-loader": "^8.3.0",
@@ -50,6 +51,7 @@
     "pretty-quick": "^3.1.3",
     "sass": "1.32.12",
     "typescript": "^4.6.4",
+    "unocss": "^0.48.0",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
