🎉 Remoção arquivos desnecessários

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#3f432b",
-    "activityBar.background": "#3f432b",
+    "activityBar.activeBackground": "#03b669",
+    "activityBar.background": "#03b669",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#000000",
-    "activityBarBadge.foreground": "#e7e7e7",
+    "activityBarBadge.background": "#f1e0fe",
+    "activityBarBadge.foreground": "#15202b",
     "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#3f432b",
-    "statusBar.background": "#222417",
+    "sash.hoverBorder": "#03b669",
+    "statusBar.background": "#02844c",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#3f432b",
-    "statusBarItem.remoteBackground": "#222417",
+    "statusBarItem.hoverBackground": "#03b669",
+    "statusBarItem.remoteBackground": "#02844c",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#222417",
+    "titleBar.activeBackground": "#02844c",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#22241799",
+    "titleBar.inactiveBackground": "#02844c99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#222417",
+  "peacock.color": "#02844c",
   "i18n-ally.localesPaths": ["locales"]
 }
